# rapyuta-mapping

./: .gitignore  README.md  fuse_rosbags.py  generate_rce_config.py  multi_robot.rviz  pc.cfg  pc_vis.cfg  robot.cfg  robot.cfg.template  robot_new.cfg  test_tf.cfg  vgatoqvga.py  workstation.cfg
g2o/: Makefile
rm_capture_server/: CMakeLists.txt  mainpage.dox  manifest.xml
rm_capture_server/scripts/: capture_sphere.py
rm_capture_server/src/: capture_server.cpp
rm_capture_server/srv/: Capture.srv
rm_description/: mainpage.dox  manifest.xml
rm_description/urdf/: cloudbot.urdf.xacro  mount.urdf.xacro
rm_launch/: free_space.bt  mainpage.dox  manifest.xml
rm_launch/launch/: _amcl.launch  _mobile_base.launch  _robot.launch  base.launch  benchmark.launch  calibrate_base.launch  cam_vo.launch  camera.launch  capture_server.launch  decompression.launch  decompression_from_cloud.launch  keyboard_teleop.launch  keyframe_sender.launch  kinect_frames.launch  mapping.launch  multi_mapping.launch  octomap_mapping.launch  odometry_validation.launch  proc.launch  robot.launch  server_turtlebot_move.launch  visual_odometry.launch
rm_launch/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rm_localization/: CMakeLists.txt  mainpage.dox  manifest.xml
rm_localization/include/: convert.h  convert_depth_to_cloud.h  frame.h  keyframe.h  reduce_jacobian.h  se3ukf.hpp  subsample.h  util.h  warp.h
rm_localization/msg/: Keyframe.msg  Transform.msg
rm_localization/src/: frame.cpp  keyframe.cpp  main.cpp  reduce_jacobian.cpp  reduce_jacobian_generated.cpp  symbolic_jacobian.py  test_vo.cpp  test_warp.cpp  util.cpp
rm_localization/srv/: SetInitialPose.srv  SetMap.srv  UpdateMap.srv
rm_localization/test/: sigma_points_test.cpp
rm_multi_mapper/: CMakeLists.txt  corridor.csv  mainpage.dox  manifest.xml  out.csv  schema.sql
rm_multi_mapper/action/: G2oWorker.action  Worker.action  WorkerSlam.action
rm_multi_mapper/include/: color_keyframe.h  icp_map.h  keyframe.h  keyframe_map.h  keypoint_map.h  octomap_server.h  panorama_map.h  reduce_jacobian_icp.h  reduce_jacobian_icp_p2p.h  reduce_jacobian_rgb.h  reduce_jacobian_rgb_3d.h  reduce_jacobian_ros.h  reduce_jacobian_slam.h  reduce_jacobian_slam_3d.h  reduce_measurement_g2o.h  reduce_measurement_g2o_dist.h  robot_mapper.h  util.h  web_image_loader.h
rm_multi_mapper/msg/: KeyframePair.msg  MatRow.msg  Matrix.msg  Range.msg  WorkerAction.msg  WorkerActionFeedback.msg  WorkerActionGoal.msg  WorkerActionResult.msg  WorkerFeedback.msg  WorkerResult.msg  WorkerSlamAction.msg  WorkerSlamActionFeedback.msg  WorkerSlamActionGoal.msg  WorkerSlamActionResult.msg  WorkerSlamGoal.msg  workAction.msg  workActionFeedback.msg  workActionGoal.msg  workActionResult.msg  workResult.msg
rm_multi_mapper/src/: accumulator.cpp  ba_demo.cpp  binary2csv.cpp  color_keyframe.cpp  icp_map.cpp  keyframe.cpp  keyframe_map.cpp  keypoint_map.cpp  load_map_db.cpp  main.cpp  master_g2o.cpp  merge_maps.cpp  optimize_map.cpp  optimize_panorama_map.cpp  panorama.cpp  panorama_map.cpp  reduce_jacobian_icp.cpp  reduce_jacobian_icp_p2p.cpp  reduce_jacobian_rgb.cpp  reduce_jacobian_rgb_3d.cpp  reduce_jacobian_ros.cpp  reduce_jacobian_slam.cpp  reduce_jacobian_slam_3d.cpp  reduce_measurement_g2o.cpp  reducer.cpp  robot_mapper.cpp  rotation_demo.cpp  show_map.cpp  show_map_db.cpp  slam.cpp  splitter.cpp  teleop_demo.cpp  test.cpp  test2.cpp  test_icp.cpp  test_keyframe_extraction.cpp  test_lkt.cpp  test_merge.cpp  test_mysql.cpp  test_panorama.cpp  (+7 more)
rm_multi_mapper_db/: CMakeLists.txt  mainpage.dox  manifest.xml  schema.sql
rm_multi_mapper_db/action/: G2oWorker.action  G2oWorker2.action
rm_multi_mapper_db/include/: util.h  util_mongo.h  util_mysql.h
rm_multi_mapper_db/msg/: KeyframePair.msg
rm_multi_mapper_db/src/: load_map_db.cpp  master_g2o.cpp  merge_maps_db.cpp  read_keypoints.cpp  reduce_measurement_g2o_dist.cpp  show_map_db.cpp  util.cpp  util_mongo.cpp  util_mysql.cpp  worker_g2o.cpp  worker_mongo_g2o.cpp
rm_multi_mapper_db/test/: util_test.cpp
rm_multi_mapper_db/test/data/map/: positions.txt
rm_openni2/: Makefile  PS1080.ini  disable_softfp_arm.patch  mainpage.dox  manifest.xml
rm_openni2_camera/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  test.launch
rm_openni2_camera/include/: frame_callback.h  openni2_camera.h
rm_openni2_camera/src/: frame_callback.cpp  main.cpp  node.cpp  nodelet.cpp  openni2_camera.cpp
rm_parallel/: bal.py  optimize_slam.py  slam.py  symbolic_jacobian.py  symbolic_jacobian_bal.py  symbolic_jacobian_slam.py
rm_servo/: mainpage.dox  manifest.xml
rm_servo/src/: servo_controller.py
rm_visual_odometry/: CMakeLists.txt  mainpage.dox  manifest.xml
rm_visual_odometry/src/: visual_odometry_node.cpp
sophus/: Makefile  manifest.xml
